[project]
name = "arctickit"
version = "0.2.0"
description = "Utilities for working with data in polars."
requires-python = ">=3.11"
dependencies = [
    "polars>=1.39.0",
    "polars-io>=0.5.0",
    "polars-readstat>=0.14.4",
    "pyreadstat>=1.3.3",
    "pytest>=9.0.2",
    "tabulate>=0.10.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = "src"
